Debugging and POM file refactoring.